update, change to hook & add navbar

--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,16 @@
 body {
-  margin: 0;
+  margin: 0px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url('./assets/pokemon-bg-glow.jpg');
+  background-repeat: no-repeat;
+  background-color: black;
+  background-size: 79%; 
+  background-attachment: fixed;
+  background-position: 50% 0%;
 }
 
 code {
