--- a/src/style/pokemonCard.css
+++ b/src/style/pokemonCard.css
@@ -4,6 +4,7 @@
   border-radius: 10px 0px 10px 0px;
   background-color: rgba(114, 21, 5, 0.705);
   box-shadow: 0px 0px 18px rgb(252, 233, 101);
+  max-height: 217px;
   overflow: hidden;
   cursor: pointer;
 }
