--- a/src/style/navbar.css
+++ b/src/style/navbar.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: space-between;
   color: white;
-  padding: 10px 15px;
+  padding: 0px 15px;
   top: 0;
   position: fixed;
   width: 100%;
@@ -11,20 +11,70 @@
   z-index: 2;
 }
 
-.navbar h1, .navbar h3 {
+.nav-right {
+  display: flex;
+  margin-right: 35px;
+}
+
+.nav-left {
+  padding: 10px 0px;
+  margin: auto 0px;
+  display: flex;
+}
+
+.logo-img {
+  max-height: 45px;
+  cursor: pointer;
+}
+
+.logo-img:hover {
+  transform: scale(1.1);
+}
+
+.search-container {
+  margin: auto 0px;
+  margin-left: 35px;
+}
+
+.search-bar {
+  height: 38px;
+  width: 275px;
+  border: none;
+  border-radius: 5px 0px 0px 5px;
+}
+
+.search-btn {
+  height: 40px;
+  border: none;
+  border-radius: 0px 5px 5px 0px;
+  cursor: pointer;
+}
+
+.search-btn:hover {
+  background-color: rgb(219, 219, 219);
+}
+
+.navigation {
+  color: white;
+  text-decoration: none;
   margin: 0px;
   cursor: pointer;
   text-align: center;
   align-content: center;
-  margin: auto 0px;
+  padding: 18px 25px;
+  font-size: 18px;
 }
 
-.navbar h3 {
-  margin-right: 35px;
-}
-
-.navbar h1:hover, .navbar h3:hover {
+.navigation:hover {
   transition: 0.25s ease;
-  text-shadow: 0px 0px 2px white;
-  transform: scale(1.05);
+  text-decoration: underline white;
+  background-color: rgb(30, 30, 30);
+}
+
+.inHome {
+  background-color: rgb(25, 25, 25);
+}
+
+.inFav {
+  background-color: rgb(25, 25, 25);
 }
